tests/marouter/errors/incomplete_connections/to_missing2of2_allowed/routes.marouter
<?xml version="1.0" encoding="UTF-8"?>

<!-- generated on 10/02/15 12:27:50 by SUMO marouter Version dev-SVN-r18990
<?xml version="1.0" encoding="UTF-8"?>

<configuration xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/marouterConfiguration.xsd">

    <input>
        <net-file value="input_net.net.xml"/>
        <additional-files value="input_taz.taz.xml"/>
        <od-matrix-files value="input_od_o.fma"/>
    </input>

    <output>
        <output-file value="routes.rou.xml"/>
    </output>

    <processing>
        <ignore-errors value="true"/>
    </processing>

    <report>
        <xml-validation value="never"/>
    </report>

</configuration>
-->

<routes xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/routes_file.xsd">
    <flow id="0" begin="0.00" end="86400.00" number="24" fromTaz="2" toTaz="1" departLane="free" departSpeed="max">
        <routeDistribution>
            <route cost="0.00" probability="24.00000000" edges=""/>
        </routeDistribution>
    </flow>
</routes>
